Selective improvements to prevent stack overflow issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -212,7 +212,7 @@ body {
 
 #wordList
 {
-    /* height: 100%; */
+    height: 100%;
     position: relative;
     overflow: hidden;
     font-size: .85em;
